src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_oid.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc(\n    sqlname = \"integer_to_oid\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastOidToInt32)\n)]\nfn cast_int32_to_oid(a: i32) -> Oid {\n    Oid(u32::reinterpret_cast(a))\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastInt32ToOid;
impl crate::func::EagerUnaryFunc for CastInt32ToOid {
    type Input<'a> = i32;
    type Output<'a> = Oid;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int32_to_oid(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastOidToInt32)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastInt32ToOid {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("integer_to_oid")
    }
}
fn cast_int32_to_oid(a: i32) -> Oid {
    Oid(u32::reinterpret_cast(a))
}
