src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__int32__cast_int32_to_string.snap
---
source: src/expr/src/scalar/func/impls/int32.rs
expression: "#[sqlfunc(\n    sqlname = \"integer_to_text\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastStringToInt32)\n)]\nfn cast_int32_to_string(a: i32) -> String {\n    let mut buf = String::new();\n    strconv::format_int32(&mut buf, a);\n    buf\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastInt32ToString;
impl crate::func::EagerUnaryFunc for CastInt32ToString {
    type Input<'a> = i32;
    type Output<'a> = String;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_int32_to_string(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastStringToInt32)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastInt32ToString {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("integer_to_text")
    }
}
fn cast_int32_to_string(a: i32) -> String {
    let mut buf = String::new();
    strconv::format_int32(&mut buf, a);
    buf
}
